tests/paczka1/fuzzy1/62215509.err
Error in line 1: A793 A663 92,7
Error in line 5: loUY A663 42,3
Error in line 2: G1v3SF A793 1,9
Error in line 10: G1v3SF S363 26,3
Error in line 25: loUY A793 92,2
Error in line 37: wNCJ S363 47,8
